resources/router.yaml

apiVersion: v1
kind: Pod
metadata:
  name: router
  annotations:
    k8s.v1.cni.cncf.io/networks: '[
      {
        "name": "client-net",
        "interface": "client-net",
        "ips": ["198.51.100.250/24", "2001::198:51:100:250/112"]
      },
      {
        "name": "node-egress",
        "interface": "node-egress",
        "ips": ["198.18.200.250/24", "2001::198:18:200:250/112"]
      },
      {
        "name": "spk-egress",
        "interface": "tmm-egress",
        "ips": ["198.18.100.250/24", "2001::198:18:100:250/112"]
      },
      {
        "name": "storage-net",
        "interface": "storage-net",
        "ips": ["203.0.113.250/24", "2001::203:0:113:250/112"]
      }
    ]'
spec:
  containers:
  - env:
    #image: artifactory.f5net.com/dockerhub-remote/frrouting/frr:v8.4.0
    image: quay.io/frrouting/frr:8.4.6
    imagePullPolicy: IfNotPresent
    name: frr
    securityContext:
      privileged: true
      allowPrivilegeEscalation: true
      capabilities:
        add:
        - NET_ADMIN
        - IPC_LOCK
      runAsUser: 0
    volumeMounts:
      - name: router-config
        mountPath: /etc/frr/
  volumes:
    - name: router-config
      configMap:
        name: router-config
